# pixgrid-rs

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml  rust.yml  security-audit.yml
instances/: all_diff.pg  cercle.pg  heart.pg  nested_squares.pg  nested_squares_15.pg
src/: lib.rs
